# geometrize-lib

./: CMakeLists.txt
geometrize/geometrize/: commonutil.cpp  commonutil.h
geometrize/geometrize/exporter/: shapejsonexporter.cpp
